--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "highlight.js": "^11.11.1",
+        "marked": "^16.1.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^7.7.0",
+        "rehype-highlight": "^7.0.2",
         "styled-components": "^5.3.10"
     },
     "devDependencies": {
