--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "date-fns": "^4.1.0",
         "highlight.js": "^11.11.1",
         "marked": "^16.1.1",
         "react": "^19.1.0",
+        "react-big-calendar": "^1.19.4",
         "react-dom": "^19.1.0",
         "react-markdown": "^10.1.0",
         "react-router-dom": "^7.7.0",
@@ -25,6 +27,7 @@
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@types/react": "^19.1.8",
+        "@types/react-big-calendar": "^1.16.2",
         "@types/react-dom": "^19.1.6",
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.34",
