--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "date-fns": "^4.1.0",
         "highlight.js": "^11.11.1",
         "marked": "^16.1.1",
+        "moment": "^2.30.1",
         "react": "^19.1.0",
         "react-big-calendar": "^1.19.4",
         "react-dom": "^19.1.0",
