--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "axios": "^1.11.0",
         "date-fns": "^4.1.0",
         "highlight.js": "^11.11.1",
         "marked": "^16.1.1",
