--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "react-markdown": "^10.1.0",
         "react-router-dom": "^7.7.0",
         "rehype-highlight": "^7.0.2",
-        "styled-components": "^5.3.10"
+        "styled-components": "^5.3.10",
+        "swr": "^2.3.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
