--- a/package.json
+++ b/package.json
@@ -7,25 +7,31 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint .",
+        "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+        "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+        "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+        "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
         "preview": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d dist",
+        "update:github": "node scripts/update-github-data.mjs"
     },
     "dependencies": {
-        "axios": "^1.11.0",
-        "date-fns": "^4.1.0",
+        "github-markdown-css": "^5.8.1",
         "highlight.js": "^11.11.1",
-        "marked": "^16.1.1",
         "moment": "^2.30.1",
         "react": "^19.1.0",
-        "react-big-calendar": "^1.19.4",
         "react-dom": "^19.1.0",
+        "react-icons": "^5.5.0",
+        "react-is": "^19.2.3",
         "react-markdown": "^10.1.0",
         "react-router-dom": "^7.7.0",
+        "remark-gfm": "^4.0.0",
+        "remark-math": "^6.0.0",
         "rehype-highlight": "^7.0.2",
-        "styled-components": "^5.3.10",
-        "swr": "^2.3.4"
+        "rehype-katex": "^7.0.1",
+        "rehype-raw": "^7.0.0",
+        "styled-components": "^5.3.10"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
@@ -35,12 +41,15 @@
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.34",
         "@vitejs/plugin-react": "^4.6.0",
-        "eslint": "^9.30.1",
+        "eslint": "^9.31.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "gh-pages": "^6.3.0",
         "globals": "^16.3.0",
+        "prettier": "^3.2.5",
         "typescript": "^5.8.3",
+        "typescript-eslint": "^8.24.0",
         "vite": "^7.0.4"
     }
 }
