--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
         "update:github": "node scripts/update-github-data.mjs"
     },
     "dependencies": {
+        "dompurify": "^3.3.1",
         "github-markdown-css": "^5.8.1",
         "highlight.js": "^11.11.1",
+        "marked": "^17.0.1",
+        "marked-highlight": "^2.2.3",
+        "marked-katex-extension": "^5.1.6",
         "moment": "^2.30.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -26,15 +30,17 @@
         "react-is": "^19.2.3",
         "react-markdown": "^10.1.0",
         "react-router-dom": "^7.7.0",
-        "remark-gfm": "^4.0.0",
-        "remark-math": "^6.0.0",
         "rehype-highlight": "^7.0.2",
         "rehype-katex": "^7.0.1",
         "rehype-raw": "^7.0.0",
+        "remark-gfm": "^4.0.0",
+        "remark-math": "^6.0.0",
         "styled-components": "^5.3.10"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@types/dompurify": "^3.0.5",
+        "@types/marked": "^5.0.2",
         "@types/react": "^19.1.8",
         "@types/react-big-calendar": "^1.16.2",
         "@types/react-dom": "^19.1.6",
